# linux-cop

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  app.py  install.sh  linuxcop.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/i18n/: MESSAGES.json  MOODS.json
docs/memory/agent/: agent_memory.md
docs/memory/system/: system_history.json
docs/prompts/: model_def.md  model_func.md  model_safety.md  system_prompt.md
docs/prompts/mood/: açıklayıcı.md  ciddi.md  eğitmen.md  minimalist.md  mizahi.md
linux_cop/: __init__.py
linux_cop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
linux_cop/cli/: __init__.py  commands.py  main.py  settings.py  startup.py
linux_cop/core/agents/: base_agent.py
linux_cop/core/env/: apis.py
linux_cop/core/middleware/: sys_info_mw.py
linux_cop/core/tools/: __init__.py  python_repl_tool.py  shell_tool.py  user_info_tool.py
linux_cop/core/utils/: parse_user.py  parser.py
linux_cop/docs/prompts/: system_prompt.md
linux_cop/docs/prompts/mood/: explanatory.md  humorous.md  serious.md
linux_cop/logs/: shell_history.json
src/: context.py  get_api.py  i18n.py  session_start.py  smolagent_to_langchain.py  tools.py  v1.py  v2.py
src/linuxcop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
